# sudoku

./: .gitignore  Cargo.toml  README.md  develop.ps1  develop.sh  main.py  pyproject.toml  requirements.txt  sudoku.pyi
src/: lib.rs
